--- a/test-output/index.html
+++ b/test-output/index.html
@@ -24,7 +24,7 @@
     <div class="top-banner-root">
       <span class="top-banner-title-font">Test results</span>
       <br/>
-      <span class="top-banner-font-1">1 suite</span>
+      <span class="top-banner-font-1">1 suite, 1 failed test</span>
     </div> <!-- top-banner-root -->
     <div class="navigator-root">
       <div class="navigator-suite-header">
@@ -38,7 +38,7 @@
         <div class="rounded-window">
           <div class="suite-header light-rounded-window-top">
             <a href="#" class="navigator-link" panel-name="suite-Default_suite">
-              <span class="suite-name border-passed">Default suite</span>
+              <span class="suite-name border-failed">Default suite</span>
             </a> <!-- navigator-link -->
           </div> <!-- suite-header light-rounded-window-top -->
           <div class="navigator-suite-content">
@@ -91,41 +91,21 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">5 methods,   5 passed</span>
+                    <span class="method-stats">1 method, 1 failed,   </span>
                   </li>
                   <li>
-                    <span class="method-list-title passed">Passed methods</span>
-                    <span class="show-or-hide-methods passed">
-                      <a href="#" panel-name="suite-Default_suite" class="hide-methods passed suite-Default_suite"> (hide)</a> <!-- hide-methods passed suite-Default_suite -->
-                      <a href="#" panel-name="suite-Default_suite" class="show-methods passed suite-Default_suite"> (show)</a> <!-- show-methods passed suite-Default_suite -->
+                    <span class="method-list-title failed">Failed methods</span>
+                    <span class="show-or-hide-methods failed">
+                      <a href="#" panel-name="suite-Default_suite" class="hide-methods failed suite-Default_suite"> (hide)</a> <!-- hide-methods failed suite-Default_suite -->
+                      <a href="#" panel-name="suite-Default_suite" class="show-methods failed suite-Default_suite"> (show)</a> <!-- show-methods failed suite-Default_suite -->
                     </span>
-                    <div class="method-list-content passed suite-Default_suite">
+                    <div class="method-list-content failed suite-Default_suite">
                       <span>
-                        <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="TestLoginPageErrorMessages" hash-for-method="testEmailDoesNotExistErrorMessage">testEmailDoesNotExistErrorMessage</a> <!-- method navigator-link -->
+                        <img width="3%" src="failed.png"/>
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="BasicProjectCreation.CreatePhotoApp" hash-for-method="testPhotosApp">testPhotosApp</a> <!-- method navigator-link -->
                       </span>
                       <br/>
-                      <span>
-                        <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="TestLoginPageErrorMessages" hash-for-method="testEmailFieldBlankErrorMessage">testEmailFieldBlankErrorMessage</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="TestLoginPageErrorMessages" hash-for-method="testInvalidEmailAddressErrorMessage">testInvalidEmailAddressErrorMessage</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="TestLoginPageErrorMessages" hash-for-method="testPasswordDoesNotMeetRequirementsErrorMessage">testPasswordDoesNotMeetRequirementsErrorMessage</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="TestLoginPageErrorMessages" hash-for-method="testPasswordFieldBlankErrorMessage">testPasswordFieldBlankErrorMessage</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                    </div> <!-- method-list-content passed suite-Default_suite -->
+                    </div> <!-- method-list-content failed suite-Default_suite -->
                   </li>
                 </ul>
               </div> <!-- suite-section-content -->
@@ -137,63 +117,78 @@
     <div class="wrapper">
       <div class="main-panel-root">
         <div panel-name="suite-Default_suite" class="panel Default_suite">
-          <div class="suite-Default_suite-class-passed">
+          <div class="suite-Default_suite-class-failed">
             <div class="main-panel-header rounded-window-top">
-              <img src="passed.png"/>
-              <span class="class-name">TestLoginPageErrorMessages</span>
+              <img src="failed.png"/>
+              <span class="class-name">BasicProjectCreation.CreatePhotoApp</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="testEmailDoesNotExistErrorMessage">
-                  </a> <!-- testEmailDoesNotExistErrorMessage -->
-                  <span class="method-name">testEmailDoesNotExistErrorMessage</span>
+                  <a name="testPhotosApp">
+                  </a> <!-- testPhotosApp -->
+                  <span class="method-name">testPhotosApp</span>
+                  <div class="stack-trace">org.openqa.selenium.NoSuchElementException: no such element: Unable to locate element: {&quot;method&quot;:&quot;css selector&quot;,&quot;selector&quot;:&quot;button.sub-header-button&quot;}
+  (Session info: chrome=67.0.3396.87)
+  (Driver info: chromedriver=2.35.528157 (4429ca2590d6988c0745c24c8858745aaaec01ef),platform=Mac OS X 10.13.4 x86_64) (WARNING: The server did not provide any stacktrace information)
+Command duration or timeout: 24 milliseconds
+For documentation on this error, please visit: http://seleniumhq.org/exceptions/no_such_element.html
+Build info: version: &apos;2.53.1&apos;, revision: &apos;a36b8b1cd5757287168e54b817830adce9b0158d&apos;, time: &apos;2016-06-30 19:26:09&apos;
+System info: host: &apos;Erins-MacBook-Air.local&apos;, ip: &apos;192.168.2.2&apos;, os.name: &apos;Mac OS X&apos;, os.arch: &apos;x86_64&apos;, os.version: &apos;10.13.4&apos;, java.version: &apos;1.8.0_161&apos;
+Driver info: org.openqa.selenium.chrome.ChromeDriver
+Capabilities [{applicationCacheEnabled=false, rotatable=false, mobileEmulationEnabled=false, networkConnectionEnabled=false, chrome={chromedriverVersion=2.35.528157 (4429ca2590d6988c0745c24c8858745aaaec01ef), userDataDir=/var/folders/9_/yn69lsn16vjcp7g3p527xv9c0000gn/T/.org.chromium.Chromium.qPBreU}, takesHeapSnapshot=true, pageLoadStrategy=normal, databaseEnabled=false, handlesAlerts=true, hasTouchScreen=false, version=67.0.3396.87, platform=MAC, browserConnectionEnabled=false, nativeEvents=true, acceptSslCerts=false, acceptInsecureCerts=false, locationContextEnabled=true, webStorageEnabled=true, browserName=chrome, takesScreenshot=true, javascriptEnabled=true, cssSelectorsEnabled=true, setWindowRect=true, unexpectedAlertBehaviour=}]
+Session ID: 988a795b6c0a2e7cea29a4afa4d84654
+*** Element info: {Using=css selector, value=button.sub-header-button}
+	at sun.reflect.NativeConstructorAccessorImpl.newInstance0(Native Method)
+	at sun.reflect.NativeConstructorAccessorImpl.newInstance(NativeConstructorAccessorImpl.java:62)
+	at sun.reflect.DelegatingConstructorAccessorImpl.newInstance(DelegatingConstructorAccessorImpl.java:45)
+	at java.lang.reflect.Constructor.newInstance(Constructor.java:423)
+	at org.openqa.selenium.remote.ErrorHandler.createThrowable(ErrorHandler.java:206)
+	at org.openqa.selenium.remote.ErrorHandler.throwIfResponseFailed(ErrorHandler.java:158)
+	at org.openqa.selenium.remote.RemoteWebDriver.execute(RemoteWebDriver.java:678)
+	at org.openqa.selenium.remote.RemoteWebDriver.findElement(RemoteWebDriver.java:363)
+	at org.openqa.selenium.remote.RemoteWebDriver.findElementByCssSelector(RemoteWebDriver.java:492)
+	at org.openqa.selenium.By$ByCssSelector.findElement(By.java:430)
+	at org.openqa.selenium.remote.RemoteWebDriver.findElement(RemoteWebDriver.java:355)
+	at pages.ProjectDashboardPage.clickCreateNewProjectButtonOnSelectPlatformModal(ProjectDashboardPage.java:28)
+	at BasicProjectCreation.CreatePhotoApp.testPhotosApp(CreatePhotoApp.java:37)
+	at sun.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
+	at sun.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:62)
+	at sun.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)
+	at java.lang.reflect.Method.invoke(Method.java:498)
+	at org.testng.internal.MethodInvocationHelper.invokeMethod(MethodInvocationHelper.java:108)
+	at org.testng.internal.Invoker.invokeMethod(Invoker.java:661)
+	at org.testng.internal.Invoker.invokeTestMethod(Invoker.java:869)
+	at org.testng.internal.Invoker.invokeTestMethods(Invoker.java:1193)
+	at org.testng.internal.TestMethodWorker.invokeTestMethods(TestMethodWorker.java:126)
+	at org.testng.internal.TestMethodWorker.run(TestMethodWorker.java:109)
+	at org.testng.TestRunner.privateRun(TestRunner.java:744)
+	at org.testng.TestRunner.run(TestRunner.java:602)
+	at org.testng.SuiteRunner.runTest(SuiteRunner.java:380)
+	at org.testng.SuiteRunner.runSequentially(SuiteRunner.java:375)
+	at org.testng.SuiteRunner.privateRun(SuiteRunner.java:340)
+	at org.testng.SuiteRunner.run(SuiteRunner.java:289)
+	at org.testng.SuiteRunnerWorker.runSuite(SuiteRunnerWorker.java:52)
+	at org.testng.SuiteRunnerWorker.run(SuiteRunnerWorker.java:86)
+	at org.testng.TestNG.runSuitesSequentially(TestNG.java:1301)
+	at org.testng.TestNG.runSuitesLocally(TestNG.java:1226)
+	at org.testng.TestNG.runSuites(TestNG.java:1144)
+	at org.testng.TestNG.run(TestNG.java:1115)
+	at org.testng.remote.AbstractRemoteTestNG.run(AbstractRemoteTestNG.java:114)
+	at org.testng.remote.RemoteTestNG.initAndRun(RemoteTestNG.java:251)
+	at org.testng.remote.RemoteTestNG.main(RemoteTestNG.java:77)
+
+</div> <!-- stack-trace -->
                   <em>
-(Verify that when a user enters an email address not associated with a DropSource account the correct UI validation error is displayed.)                  </em>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="testEmailFieldBlankErrorMessage">
-                  </a> <!-- testEmailFieldBlankErrorMessage -->
-                  <span class="method-name">testEmailFieldBlankErrorMessage</span>
-                  <em>
-(Verify that when a user leaves the email field blank prior to or upon attempting login the correct UI validation error is displayed.)                  </em>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="testInvalidEmailAddressErrorMessage">
-                  </a> <!-- testInvalidEmailAddressErrorMessage -->
-                  <span class="method-name">testInvalidEmailAddressErrorMessage</span>
-                  <em>
-(Verify that the when a user enters an email in an invalid format the correct UI validation error is displayed.)                  </em>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="testPasswordDoesNotMeetRequirementsErrorMessage">
-                  </a> <!-- testPasswordDoesNotMeetRequirementsErrorMessage -->
-                  <span class="method-name">testPasswordDoesNotMeetRequirementsErrorMessage</span>
-                  <em>
-(Verify that when a user enters a password that does not meet requirements the correct UI validation error is displayed.)                  </em>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="testPasswordFieldBlankErrorMessage">
-                  </a> <!-- testPasswordFieldBlankErrorMessage -->
-                  <span class="method-name">testPasswordFieldBlankErrorMessage</span>
-                  <em>
-(Verify that when a user leaves the password field blank prior to or upon attempting login the correct UI validation error is displayed.)                  </em>
+(Verify that a basic project can be created)                  </em>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
-          </div> <!-- suite-Default_suite-class-passed -->
+          </div> <!-- suite-Default_suite-class-failed -->
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">/private/var/folders/52/7rgfkhf96sz0r5z99kzwtpn40000gn/T/testng-eclipse-698022874/testng-customsuite.xml</span>
+            <span class="header-content">/private/var/folders/9_/yn69lsn16vjcp7g3p527xv9c0000gn/T/testng-eclipse-1681409232/testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -202,7 +197,7 @@
 &lt;suite guice-stage=&quot;DEVELOPMENT&quot; name=&quot;Default suite&quot;&gt;
   &lt;test verbose=&quot;2&quot; name=&quot;Default test&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;TestLoginPageErrorMessages&quot;/&gt;
+      &lt;class name=&quot;BasicProjectCreation.CreatePhotoApp&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -242,32 +237,16 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(5);
+data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'testInvalidEmailAddressErrorMessage')
-data.setCell(0, 2, 'TestLoginPageErrorMessages')
-data.setCell(0, 3, 32801);
-data.setCell(1, 0, 1)
-data.setCell(1, 1, 'testPasswordDoesNotMeetRequirementsErrorMessage')
-data.setCell(1, 2, 'TestLoginPageErrorMessages')
-data.setCell(1, 3, 18320);
-data.setCell(2, 0, 2)
-data.setCell(2, 1, 'testEmailDoesNotExistErrorMessage')
-data.setCell(2, 2, 'TestLoginPageErrorMessages')
-data.setCell(2, 3, 3413);
-data.setCell(3, 0, 3)
-data.setCell(3, 1, 'testPasswordFieldBlankErrorMessage')
-data.setCell(3, 2, 'TestLoginPageErrorMessages')
-data.setCell(3, 3, 2770);
-data.setCell(4, 0, 4)
-data.setCell(4, 1, 'testEmailFieldBlankErrorMessage')
-data.setCell(4, 2, 'TestLoginPageErrorMessages')
-data.setCell(4, 3, 2763);
+data.setCell(0, 1, 'testPhotosApp')
+data.setCell(0, 2, 'BasicProjectCreation.CreatePhotoApp')
+data.setCell(0, 3, 48);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 1 minutes</span>
+              <span class="suite-total-time">Total running time: 48 ms</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -293,34 +272,20 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">TestLoginPageErrorMessages</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">BasicProjectCreation.CreatePhotoApp</div> <!-- chronological-class-name -->
               <div class="configuration-test before">
-                <span class="method-name">getChromeDriver</span>
+                <span class="method-name">LoginAsUser</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-test before -->
               <div class="test-method">
-                <span class="method-name">testEmailDoesNotExistErrorMessage</span>
-                <span class="method-start">7916 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">testEmailFieldBlankErrorMessage</span>
-                <span class="method-start">11331 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">testInvalidEmailAddressErrorMessage</span>
-                <span class="method-start">14095 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">testPasswordDoesNotMeetRequirementsErrorMessage</span>
-                <span class="method-start">46897 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">testPasswordFieldBlankErrorMessage</span>
-                <span class="method-start">65218 ms</span>
+                <img src="failed.png">
+                </img>
+                <span class="method-name">testPhotosApp</span>
+                <span class="method-start">5463 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-test after">
                 <span class="method-name">closeBrowser</span>
-                <span class="method-start">67990 ms</span>
+                <span class="method-start">5673 ms</span>
               </div> <!-- configuration-test after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
