--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,10 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="62aa67">  <td>18/06/20 10:09:53</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;CreatePhotoApp.LoginAsUser()[pri:0, instance:BasicProjectCreation.CreatePhotoApp@66a3ffec]">&gt;&gt;LoginAsUser</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1596000437</td>   <td></td> </tr>
-<tr bgcolor="62aa67">  <td>18/06/20 10:09:58</td>   <td>5457</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CreatePhotoApp.testPhotosApp()[pri:0, instance:BasicProjectCreation.CreatePhotoApp@66a3ffec]">testPhotosApp</td> 
-  <td>main@1596000437</td>   <td></td> </tr>
-<tr bgcolor="62aa67">  <td>18/06/20 10:09:59</td>   <td>5669</td> <td>&nbsp;</td><td title="&lt;&lt;CreatePhotoApp.closeBrowser()[pri:0, instance:BasicProjectCreation.CreatePhotoApp@66a3ffec]">&lt;&lt;closeBrowser</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1596000437</td>   <td></td> </tr>
+<tr bgcolor="8a60e3">  <td>18/06/20 16:38:52</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;CreatePhotoApp.LoginAsUser()[pri:0, instance:BasicProjectCreation.CreatePhotoApp@604ed9f0]">&gt;&gt;LoginAsUser</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1497973285</td>   <td></td> </tr>
+<tr bgcolor="8a60e3">  <td>18/06/20 16:39:02</td>   <td>9377</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CreatePhotoApp.testPhotosApp()[pri:0, instance:BasicProjectCreation.CreatePhotoApp@604ed9f0]">testPhotosApp</td> 
+  <td>main@1497973285</td>   <td></td> </tr>
+<tr bgcolor="8a60e3">  <td>18/06/20 16:39:16</td>   <td>23645</td> <td>&nbsp;</td><td title="&lt;&lt;CreatePhotoApp.closeBrowser()[pri:0, instance:BasicProjectCreation.CreatePhotoApp@604ed9f0]">&lt;&lt;closeBrowser</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1497973285</td>   <td></td> </tr>
 </table>
